--- a/src/components/HacklabsTimer.css
+++ b/src/components/HacklabsTimer.css
@@ -39,7 +39,7 @@
 @media (max-width: 480px) {
   .total_8 {
     gap: 8px;
-    margin: 50px 0;
+    margin: 50px 15px;
   }
 
   .box_8 {
